--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "SodiumCipherStream"]
-	path = SodiumCipherStream
+	path = subprojects/SodiumCipherStream
 	url = https://github.com/jakub-w/SodiumCipherStream.git
