Removed the dependency on Handshaker from Server and Client
They now need only the Handshaker's address to connect to.

Both the Server and the Client classes were renamed to ...Base and
helper subclasses were added in their place. These helper classes
create and handle a Handshaker without any requirements from the user
other than specifying the Handshaker's construction arguments in the
helper class' constructor.
Also factory methods were added for easier construction, especially
for the Server, which requires two template arguments - one of them
must be specified explicitly, the other one could be deduced from the
constructor but c++ doesn't allow partial deduction.

--- a/meson.build
+++ b/meson.build
@@ -17,7 +17,7 @@
 # <https://www.gnu.org/licenses/>.
 
 project('channeling', 'cpp',
-        default_options: ['cpp_std=c++17'])
+        default_options: ['cpp_std=c++20'])
 
 # Build types
 if get_option('buildtype').startswith('debug')
@@ -69,7 +69,8 @@ executable('server',
 
 executable('client',
 	   sources: ['client-main.cpp',
-		     'EncryptionCommon.cpp'],
+		     'EncryptionCommon.cpp',
+		     'Client.cpp'],
 	   include_directories: [subproject_incs],
 	   link_with: [cipher_stream_lib],
 	   dependencies: required_deps)
